--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
     <script type="module" src="/src/main.jsx"></script>
+
+    <script type="module">
+      import { createNightowl } from '@bufferhead/nightowl'
+
+      createNightowl({
+        defaultMode: 'dark',
+        toggleButtonMode: 'newState'
+      })
+    </script>
   </body>
 </html>
